# composlang_ud

./: .gitignore  README.md  adjnoun.py  corpus.py  pyproject.toml  test_cache.py  wordmatrix.py
bash/: batch_LM_score.sh  batch_preprocess_coca.sh
composlang/: __init__.py  __main__.py  cache.py  composition.py  corpus.py  plotting.py  utils.py  word.py
notebooks/: adjnoun.py  behavioral.py  figure-2-process_llm_sparsity.ipynb  figure-3-freq-human-data.ipynb  figure-3-llm-human-data.ipynb  figure-4-llm-human-data-copy.ipynb  figure-4-llm-human-data.ipynb  process_llm_sparsity.ipynb  process_prolific-pilot.ipynb  process_prolific.ipynb
notebooks/cleaned_data/: compare-with-vecchi.ipynb  composlang-beh_no-dupes_agg-by-item.csv  composlang-beh_no-dupes_exclude-loo_agg-by-item.csv  counts_server.py  exclude_participants.ipynb
notebooks/simulate-comb-A-N/: figure-1-analyze-simulated.ipynb  legitimize_probabilities.ipynb  stimuli_for_LMs.ipynb
sample_data/: sample_parsed_coca.txt
src/: corpus.py  graph.py  plotting.py  wordmatrix.py
test/: test_triplets.py
vecchi2016_an_data_cogsci/: ratings-from-vecchi.ipynb  vecchi-scores.csv
