[tool.poetry]
name = "composlang"
version = "0.0.1"
description = ""
authors = ["aalok-sathe <asathe@mit.edu>"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
stanza = "^1.3.0"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
tqdm = "^4.63.0"
more-itertools = "^8.12.0"
scipy = "^1.8.0"
networkx = "^2.7.1"
pyvis = "^0.1.9"
methodtools = "^0.4.5"
diskcache = "^5.4.0"
sqlitedict = "^2.0.0"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.8"
jupytext = "^1.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
